--- a/WS/index.html
+++ b/WS/index.html
@@ -138,9 +138,9 @@
 		      	<div class="youtubeBox" data-scroll-reveal="enter top enter top over 3s after 0.5s">
 		        	<iframe id="muteYouTubeVideoPlayer" src="https://www.youtube.com/embed/LRotH8UbFhI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		         	<h4 class="t09-1">【花綻繆思•金馬盛宴】</h4>
-		          	<p>花綻最美的瞬間，最燦爛的滋味<br>
-		            	從花園到餐桌以花入菜，花綠繽紛的配角<br>
-		            	金牌主廚設計一場視覺、嗅覺及味覺饗宴<br>
+		          	<p>花綻最美的瞬間，最燦爛的滋味<span class="no">，</span>
+		          		<span class="b">從花園到餐桌以花入菜，花綠繽紛的配角</span><span class="no">，</span>
+		            	<span class="b">金牌主廚設計一場視覺、嗅覺及味覺饗宴</span><span class="no">，</span>
 		            	細緻感受花、葉賦予的味覺驚豔與美感！
 		          	</p>
 		        </div>
