--- a/WS/index.html
+++ b/WS/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>王品 花饗宴</title>
+<title>王品 - 花綻繆思•金馬盛宴</title>
 <meta name='description' content="花饗宴，花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜，花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！"/>
 <meta name='keywords' content="王品, 牛排, 新品, 只款待心中最重要的人, 花饗宴, 花綻繆思, 金馬盛宴, 分享優惠, 連鎖牛排餐廳, WS, wangsteak, 外酥香內軟嫩, 高雄"/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<link rel="shortcut icon" href="http://www.wowprime.com/img/favicon.png">
+<link rel="shortcut icon" href="https://www.wowprime.com/img/favicon.png">
 
 <meta property="og:image" content="images/share_pic.jpg"/>
-<meta property="og:title" content="????"/>
+<meta property="og:title" content="王品 - 花綻繆思•金馬盛宴"/>
 <meta property="og:url" content="#"/>
 <meta property="og:description" content="花饗宴，花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜，花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！"/>
 <meta property="og:type" content="website"/>
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="css/KV-style.css">
 <link rel="stylesheet" href="css/style.css">
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="js/gotop.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
