--- a/WS/iframe/food_02.html
+++ b/WS/iframe/food_02.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>王品 只款待心中最重要的人 X 25th 台灣經典牛排</title>
-<meta name='description' content="致敬25 • 時光回廊，2018 是《王品牛排》的25週年，我們一起，讓每一頁每一行都無與倫比的精采，公開分享此影片至個人FB或IG結帳時出示FB分享頁面 獨享【套餐85折】款待！"/>
-<meta name='keywords' content="王品, 牛排, 只款待心中最重要的人, 台灣經典牛排, 連鎖牛排餐廳, WS, wangsteak, 外酥香內軟嫩, 分享, 優惠, 致敬25, 時光回廊"/>
+<title>王品 - 花綻繆思•金馬盛宴</title>
+<meta name='description' content="花饗宴，花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜，花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！"/>
+<meta name='keywords' content="王品, 牛排, 新品, 只款待心中最重要的人, 花饗宴, 花綻繆思, 金馬盛宴, 分享優惠, 連鎖牛排餐廳, WS, wangsteak, 外酥香內軟嫩, 高雄"/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -18,9 +18,9 @@
 <body>
 	<section class="pop_info">
 		<div class="food_photo"><img class="pop-pc" src="../images/food_02_L.jpg" width="100%" /><img class="pop-mob" src="../images/food_02s.jpg" width="100%" /></div>
-		<h4>玉米爆米花濃湯</h4>
-		<h5>Popcorn, Baby Corn and Creamy Corn Soup</h5>
-		<p>手採新鮮玉米、南瓜及筊白筍慢火熬煮而成，體現蔬果的自 然鮮甜味，搭配爆米花、玉米鬚及炙燒玉米筍入口品嚐。</p>
+		<h4>無花果烏魚子生火腿</h4>
+		<h5>Mullet Roe and Serrano Ham</h5>
+		<p>以無花果、台灣烏魚子、西班牙塞諾拉生火腿、帕達諾乾酪、 酪梨妝點多種生菜組成，搭配酸甜無花果醬口感清爽。</p>
 	</section>
 </body>
 
