--- a/WS/iframe/food_04.html
+++ b/WS/iframe/food_04.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>王品 只款待心中最重要的人 X 25th 台灣經典牛排</title>
-<meta name='description' content="致敬25 • 時光回廊，2018 是《王品牛排》的25週年，我們一起，讓每一頁每一行都無與倫比的精采，公開分享此影片至個人FB或IG結帳時出示FB分享頁面 獨享【套餐85折】款待！"/>
-<meta name='keywords' content="王品, 牛排, 只款待心中最重要的人, 台灣經典牛排, 連鎖牛排餐廳, WS, wangsteak, 外酥香內軟嫩, 分享, 優惠, 致敬25, 時光回廊"/>
+<title>王品 - 花綻繆思•金馬盛宴</title>
+<meta name='description' content="花饗宴，花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜，花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！"/>
+<meta name='keywords' content="王品, 牛排, 新品, 只款待心中最重要的人, 花饗宴, 花綻繆思, 金馬盛宴, 分享優惠, 連鎖牛排餐廳, WS, wangsteak, 外酥香內軟嫩, 高雄"/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
