--- a/WS/index.html
+++ b/WS/index.html
@@ -123,6 +123,22 @@
     </div>
   </div>
 </div>
+
+
+		<section class="DataBox">
+		  <div class="box_title">
+		    <h3 class="t02">花綻繆思•媒體報導</h3>
+		  </div>
+		</section>
+		<section class="mediaBox">
+		  <ul class="MBox clearfix">
+		    <li data-scroll-reveal="enter left"><a href="http://tw.mensuno.asia/content/%E5%8F%B0%E7%81%A3%E7%B6%93%E5%85%B8%E7%89%9B%E6%8E%92%E6%A6%AE%E7%99%BB%E5%9C%8B%E9%9A%9B%E5%BD%B1%E5%A3%87%E6%AE%BF%E5%A0%82%EF%BC%81%E7%8E%8B%E5%93%81%E4%B8%89%E5%BA%A6%E8%9F%AC%E9%80%A3%E9%87%91%E9%A6%AC%E7%B4%85%E6%AF%AF%E6%99%9A%E5%AE%B4?utm_source=Facebook_PicSee?fbclid=IwAR3WvR9vaZ-NlBXDX0xbgH8z8gkTJ4zWFuVE0ZN1hnjbKRdkF2xZ3uUNat4 " target="_blank"><img src="images/media/01.png" width="100%" alt="台灣經典牛排榮登國際影壇殿堂！王品三度蟬連金馬紅毯晚宴"></a></li>
+		    <li data-scroll-reveal="enter top"><a href="https://www.marieclaire.com.tw/lifestyle/news/39655/page_4" target="_blank"><img src="images/media/02.png" width="100%" alt="第55屆金馬獎即將登場 王品三度蟬連金馬紅毯晚宴！"></a></li>
+		    <li data-scroll-reveal="enter left"><a href="https://www.babyou.com/opencms/productNEWS/Article001739.html" target="_blank"><img src="images/media/03.png" width="100%" alt="王品三度蟬連金馬紅毯晚宴!攜手金馬榮耀盛宴盤中鮮花竟是巨星?"></a></li>
+		    <li data-scroll-reveal="enter top"><a href="https://www.chinatimes.com/realtimenews/20181110002697-260415" target="_blank"><img src="images/media/04.png" width="100%" alt="再創輝煌！王品「榮耀配角.金馬盛宴」活動星光熠熠"></a></li>
+		  </ul>
+		</section>
+
 		<section class="DataBox" id="section3">
 			<div class="box_title">
 				<h3 class="t04">看見花綻FUN</h3>
@@ -165,8 +181,8 @@
 		            		3、結帳時出示 FB 分享頁面 獨享【金馬套餐 85 折】款待
 		            	</p>
 		            	<div class="fb_share_button clearfix">
-			            	<a class="fbButtom" href="javascript: void(window.open('http://www.facebook.com/share.php?u='.concat(encodeURIComponent('https://www.wangsteak.com.tw/event/wangstak25th/index.html'))));"><span>點我分享</span></a>
-			            	<a class="line" href="https://social-plugins.line.me/lineit/share?url=https://www.wangsteak.com.tw/event/wangstak25th/index.html"><span>用LINE傳送</span></a>
+			            	<a class="fbButtom" href="javascript: void(window.open('http://www.facebook.com/share.php?u='.concat(encodeURIComponent('填入分享網址'))));"><span>點我分享</span></a>
+			            	<a class="line" href="https://social-plugins.line.me/lineit/share?url=填入分享網址"><span>用LINE傳送</span></a>
 		            	</div>
 			            <div class="noteBox">
 			            	<p><span>注意事項：</span></p>
