--- a/WS/index.html
+++ b/WS/index.html
@@ -60,14 +60,14 @@
 
 	<!--main KV-->
 	<main>
-<div class="slider-container" id="section2">
+<div class="slider-container">
   <h1 class="KV_title" data-scroll-reveal="enter top">花饗宴</h1>
   <div class="flower_01 tmob" data-scroll-reveal="enter top enter left over 3s after 0.5s"></div>
   <div class="flower_02 tmob" data-scroll-reveal="enter top enter left over 2s after 0.5s"></div>
   <p class="logo" data-scroll-reveal="enter bottom enter top over 2s after 0.5s">王品 只款待心中最重要的人</p>
   <p class="btn clearfix" data-scroll-reveal="enter top enter right over 3s after 0.5s">
         <a class="gogogog1"><span>花綻<br>繆思</span></a>
-        <a class="gogogog2"><span>金馬<br>盛宴</span></a>
+        <a class="gogogog2"><span>媒體<br>報導</span></a>
         <a class="gogogog3"><span>分享<br>優惠</span></a>
         <a class="o_01" target="_blank" href="http://www.wangsteak.com.tw/store.aspx"><span>線上<br>訂位</span></a>
       </p>
@@ -125,7 +125,7 @@
 </div>
 
 
-		<section class="DataBox">
+		<section class="DataBox" id="section2">
 		  <div class="box_title">
 		    <h3 class="t02">花綻繆思•媒體報導</h3>
 		  </div>
