--- a/WS/index.html
+++ b/WS/index.html
@@ -10,14 +10,14 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <link rel="shortcut icon" href="https://www.wowprime.com/img/favicon.png">
 
-<meta property="og:image" content="images/share_pic.jpg"/>
+<meta property="og:image" content="https://www.wangsteak.com.tw/event/1811_flower/images/share_pic.jpg"/>
 <meta property="og:title" content="王品 - 花綻繆思•金馬盛宴"/>
-<meta property="og:url" content="#"/>
+<meta property="og:url" content="https://www.wangsteak.com.tw/event/1811_flower/index.html"/>
 <meta property="og:description" content="花饗宴，花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜，花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！"/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
-<link rel="image_src" href="images/share_pic.jpg">
+<link rel="image_src" href="https://www.wangsteak.com.tw/event/1811_flower/images/share_pic.jpg">
 
 <link rel="stylesheet" href="css/KV-style.css">
 <link rel="stylesheet" href="css/style.css">
@@ -60,70 +60,69 @@
 
 	<!--main KV-->
 	<main>
-<div class="slider-container">
-  <h1 class="KV_title" data-scroll-reveal="enter top">花饗宴</h1>
-  <div class="flower_01 tmob" data-scroll-reveal="enter top enter left over 3s after 0.5s"></div>
-  <div class="flower_02 tmob" data-scroll-reveal="enter top enter left over 2s after 0.5s"></div>
-  <p class="logo" data-scroll-reveal="enter bottom enter top over 2s after 0.5s">王品 只款待心中最重要的人</p>
-  <p class="btn clearfix" data-scroll-reveal="enter top enter right over 3s after 0.5s">
-        <a class="gogogog1"><span>花綻<br>繆思</span></a>
-        <a class="gogogog2"><span>媒體<br>報導</span></a>
-        <a class="gogogog3"><span>分享<br>優惠</span></a>
-        <a class="o_01" target="_blank" href="http://www.wangsteak.com.tw/store.aspx"><span>線上<br>訂位</span></a>
-      </p>
-  <div class="titleBox"></div>
-  <div class="slider-control left inactive"></div>
-  <div class="slider-control right"></div>
-  <ul class="slider-pagi">
-  </ul>
-  <div class="slider">
-    <div class="slide slide-0 active">
-      <div class="slide__bg"></div>
-      <div class="slide__content">
-        <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-          <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
-        </svg>
-        <div class="slide__text">
-          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“櫻桃鴨胸佐芋香鴨肝”</h2>
-        </div>
-      </div>
-    </div>
-    <div class="slide slide-1 ">
-      <div class="slide__bg"></div>
-      <div class="slide__content">
-        <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-          <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
-        </svg>
-        <div class="slide__text">
-          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“無花果烏魚子生火腿”</h2>
-        </div>
-      </div>
-    </div>
-    <div class="slide slide-2">
-      <div class="slide__bg"></div>
-      <div class="slide__content">
-        <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-          <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
-        </svg>
-        <div class="slide__text">
-          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“玉米爆米花濃湯”</h2>
-        </div>
-      </div>
-    </div>
-    <div class="slide slide-3">
-      <div class="slide__bg"></div>
-      <div class="slide__content">
-        <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-          <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
-        </svg>
-        <div class="slide__text">
-          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“紅玉珍奶泡芙”</h2>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+		<div class="slider-container">
+		  <h1 class="KV_title" data-scroll-reveal="enter top">花饗宴</h1>
+		  <div class="flower_01 tmob" data-scroll-reveal="enter top enter left over 3s after 0.5s"></div>
+		  <div class="flower_02 tmob" data-scroll-reveal="enter top enter left over 2s after 0.5s"></div>
+		  <p class="logo" data-scroll-reveal="enter bottom enter top over 2s after 0.5s">王品 只款待心中最重要的人</p>
+		  <p class="btn clearfix" data-scroll-reveal="enter top enter right over 3s after 0.5s">
+		        <a class="gogogog1"><span>花綻<br>繆思</span></a>
+		        <a class="gogogog2"><span>媒體<br>報導</span></a>
+		        <a class="gogogog3"><span>分享<br>優惠</span></a>
+		        <a class="o_01" target="_blank" href="http://www.wangsteak.com.tw/store.aspx"><span>線上<br>訂位</span></a>
+		      </p>
+		  <div class="titleBox"></div>
+		  <div class="slider-control left inactive"></div>
+		  <div class="slider-control right"></div>
+		  <ul class="slider-pagi">
+		  </ul>
+		  <div class="slider">
+		    <div class="slide slide-0 active">
+		      <div class="slide__bg"></div>
+		      <div class="slide__content">
+		        <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+		          <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
+		        </svg>
+		        <div class="slide__text">
+		          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“櫻桃鴨胸佐芋香鴨肝”</h2>
+		        </div>
+		      </div>
+		    </div>
+		    <div class="slide slide-1 ">
+		      <div class="slide__bg"></div>
+		      <div class="slide__content">
+		        <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+		          <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
+		        </svg>
+		        <div class="slide__text">
+		          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“無花果烏魚子生火腿”</h2>
+		        </div>
+		      </div>
+		    </div>
+		    <div class="slide slide-2">
+		      <div class="slide__bg"></div>
+		      <div class="slide__content">
+		        <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+		          <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
+		        </svg>
+		        <div class="slide__text">
+		          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“玉米爆米花濃湯”</h2>
+		        </div>
+		      </div>
+		    </div>
+		    <div class="slide slide-3">
+		      <div class="slide__bg"></div>
+		      <div class="slide__content">
+		        <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+		          <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
+		        </svg>
+		        <div class="slide__text">
+		          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“紅玉珍奶泡芙”</h2>
+		        </div>
+		      </div>
+		    </div>
+		  </div>
+		</div>
 
 		<section class="DataBox" id="section2">
 		  <div class="box_title">
@@ -181,8 +180,8 @@
 		            		3、結帳時出示 FB 分享頁面 獨享【金馬套餐 85 折】款待
 		            	</p>
 		            	<div class="fb_share_button clearfix">
-			            	<a class="fbButtom" href="javascript: void(window.open('http://www.facebook.com/share.php?u='.concat(encodeURIComponent('填入分享網址'))));"><span>點我分享</span></a>
-			            	<a class="line" href="https://social-plugins.line.me/lineit/share?url=填入分享網址"><span>用LINE傳送</span></a>
+			            	<a class="fbButtom" href="javascript: void(window.open('http://www.facebook.com/share.php?u='.concat(encodeURIComponent('https://bit.ly/2OGvBEh'))));"><span>點我分享</span></a>
+			            	<a class="line" href="https://social-plugins.line.me/lineit/share?url=https://bit.ly/2OGvBEh"><span>用LINE傳送</span></a>
 		            	</div>
 			            <div class="noteBox">
 			            	<p><span>注意事項：</span></p>
