--- a/WS55/iframe/food_01.html
+++ b/WS55/iframe/food_01.html
@@ -17,7 +17,7 @@
 
 <body>
 	<section class="pop_info">
-		<div class="food_photo"><img src="../images/food_01_L.jpg" width="100%" /></div>
+		<div class="food_photo"><img src="../images/food_01.jpg" width="100%" /></div>
 		<h4>台灣經典 · 王品牛排</h4>
 		<h5>Wang Steak is the Classic Steakhouse in Taiwan</h5>
 		<p>一頭牛僅供6客王品牛小排，獨家秘製中式佐料醃浸2天2夜，250℃高溫慢火烘烤1.5小時，盛裝於65度高溫白瓷盤， 展獻全熟牛排的香嫩多汁，征服全球3200萬華人味蕾。</p>
