--- a/WS55/iframe/food_02.html
+++ b/WS55/iframe/food_02.html
@@ -17,7 +17,7 @@
 
 <body>
 	<section class="pop_info">
-		<div class="food_photo"><img src="../images/food_02_L.jpg" width="100%" /></div>
+		<div class="food_photo"><img src="../images/food_02.jpg" width="100%" /></div>
 		<h4>濕式熟成肋眼牛悱(雙人35oz)</h4>
 		<h5>USDA Prime Roasted Ribeye(35oz for 2)</h5>
 		<p>濕式熟成極鮮嫩，美國安格斯黑牛，PRIME等級牛肉，極致厚切雙人35OZ肋眼牛排，外層酥香，內層肉質軟嫩細緻香甜多汁</p>
