--- a/WS55/iframe/food_03.html
+++ b/WS55/iframe/food_03.html
@@ -17,7 +17,7 @@
 
 <body>
 	<section class="pop_info">
-		<div class="food_photo"><img src="../images/food_03_L.jpg" width="100%" /></div>
+		<div class="food_photo"><img src="../images/food_03.jpg" width="100%" /></div>
 		<h4>黑松露紐約克牛排(12oz)</h4>
 		<h5>USDA Prime New York Strip Steak with Black truffle</h5>
 		<p>美國空運Prime特級紐約客，濕式熟成烘烤至5分熟，肉質柔嫩鮮香多汁，香氣四溢口感細嫩中帶有嚼勁</p>
