--- a/WS55/iframe/food_04.html
+++ b/WS55/iframe/food_04.html
@@ -17,7 +17,7 @@
 
 <body>
 	<section class="pop_info">
-		<div class="food_photo"><img src="../images/food_04_L.jpg" width="100%" /></div>
+		<div class="food_photo"><img src="../images/food_04.jpg" width="100%" /></div>
 		<h4>酥烤戰斧豬排佐莓果起司</h4>
 		<h5>Crispy Pork Chop with Strawberry & Cheese Sauce</h5>
 		<p>舒肥法真空低溫烹調製作，保留柔嫩多汁口感，重達28oz厚切戰斧豬排，多重工序烘烤，入口外層酥香內層鮮美柔嫩，匠心妝點茴香提味，搭佐秘製莓果起司醬。</p>
