--- a/WS55/iframe/food_05.html
+++ b/WS55/iframe/food_05.html
@@ -17,7 +17,7 @@
 
 <body>
 	<section class="pop_info">
-		<div class="food_photo"><img src="../images/food_05_L.jpg" width="100%" /></div>
+		<div class="food_photo"><img src="../images/food_05.jpg" width="100%" /></div>
 		<h4>極鮮龍蝦海鮮盤</h4>
 		<h5>Lobster & Pan-fried Seafood Medley</h5>
 		<p>天然海域龍蝦，肉質鮮甜彈牙，搭配鮮活美國生蠔、鮑魚與時令鮮魚的海味饗宴。</p>
