--- a/WS55/iframe/food_06.html
+++ b/WS55/iframe/food_06.html
@@ -17,7 +17,7 @@
 
 <body>
 	<section class="pop_info">
-		<div class="food_photo"><img src="../images/food_06_L.jpg" width="100%" /></div>
+		<div class="food_photo"><img src="../images/food_06.jpg" width="100%" /></div>
 		<h4>無花果烏魚子生火腿</h4>
 		<h5>Mullet Roe and Serrano Ham</h5>
 		<p>以無花果、台灣烏魚子、西班牙塞諾拉生火腿、帕達諾乾酪、酪梨妝點多種生菜組成，搭配酸甜無花果醬口感清爽。</p>
