--- a/WS55/iframe/food_07.html
+++ b/WS55/iframe/food_07.html
@@ -17,7 +17,7 @@
 
 <body>
 	<section class="pop_info">
-		<div class="food_photo"><img src="../images/food_07_L.jpg" width="100%" /></div>
+		<div class="food_photo"><img src="../images/food_07.jpg" width="100%" /></div>
 		<h4>紅玉珍奶泡芙</h4>
 		<h5>Ruby Black Bubble Milk Tea Cream Puff</h5>
 		<p>創意甜點以台灣珍珠奶茶為概念，手作泡芙注入紅玉紅茶製成奶茶慕斯，妝點新鮮水果、食用花及新鮮鳳梨製成的酸甜鳳梨花。</p>
