--- a/WS55/index.html
+++ b/WS55/index.html
@@ -134,7 +134,7 @@
   </div>
 
   <div class="mediaBox videoBox">
-    <iframe src="https://www.youtube.com/embed/sPvN3nkLaMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/VGztc3Tf5n4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </section>
 
