更新文案與圖片

--- a/WS55/index.html
+++ b/WS55/index.html
@@ -126,11 +126,12 @@
 <!-- video -->
 <section class="DataBox mag100vh">
   <div class="box_title">
-    <h3 class="t08">金馬盛宴•星光熠熠</h3>
+    <h3 class="t08">台灣經典.榮登國際</h3>
   </div>
   <div class="p_subtitle">
-    <p class="t01 pa50"><span class="p1">致敬金馬，Happy Together電影之樂，樂在一同</span><span class="comma">，</span>
-    王品訴說著您我的故事，以感動、喜悅、向經典致敬<span class="comma">。</span></p>
+    <p class="t01 pa50"><span class="p1">蟬聯金馬指定牛排餐廳，歲月淬鍊台灣經典風華</span><span class="comma">，</span>
+<span class="p1">以經典全熟牛小排向金馬致敬，以電影訴說在地台灣味</span></span><span class="comma">，</span>
+王品訴說著您與我的故事，以感動、喜悅、向影人致敬<span class="comma">。</span></p>
   </div>
 
   <div class="mediaBox videoBox">
@@ -144,7 +145,7 @@
     <h3 class="t01">王者榮耀 ‧ 金馬盛宴</h3>
   </div>
   <div class="p_subtitle">
-    <p class="t01">台灣經典王品牛排致敬金馬，金牌主廚團隊匠心設計【王者盛宴】，空運高級進口食材入饌，主廚桌邊貼心服務，尊榮款待國際影人。</p>
+    <p class="t01"><span class="p1">台灣經典王品牛排致敬金馬，金牌主廚團隊匠心設計【王者盛宴】</span><span class="comma">，</span>空運高級進口食材入饌，主廚桌邊貼心服務，尊榮款待國際影人<span class="comma">。</span></p>
   </div>
 
   <div class="ArticlesList clearfix">
