更新內容與手機版顯示圖

--- a/WS55/index.html
+++ b/WS55/index.html
@@ -8,27 +8,22 @@
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<link rel="shortcut icon" href="http://www.wowprime.com/img/favicon.png">
+<link rel="shortcut icon" href="https://www.wowprime.com/img/favicon.png">
 
-<meta property="og:image" content="https://www.wangsteak.com.tw/event/16GoldenHorse/images/share_pic.jpg"/>
+<meta property="og:image" content="https://www.wangsteak.com.tw/event/18GoldenHorse/images/share_pic.png"/>
 <meta property="og:title" content="星光熠熠 金馬盛宴 2018 金馬影展指定連鎖牛排餐廳"/>
-<meta property="og:url" content="https://www.wangsteak.com.tw/event/16GoldenHorse/index.html"/>
+<meta property="og:url" content="https://www.wangsteak.com.tw/event/18GoldenHorse/index.html"/>
 <meta property="og:description" content="台灣經典王品牛排致敬金馬，金牌主廚團隊匠心設計【王者盛宴】，空運高級進口食材入饌，主廚桌邊貼心服務，尊榮款待國際影人。"/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
-<link rel="image_src" href="https://www.wangsteak.com.tw/event/16GoldenHorse/images/share_pic.jpg">
+<link rel="image_src" href="https://www.wangsteak.com.tw/event/18GoldenHorse/images/share_pic.png">
 <link rel="stylesheet" href="css/style.css">
 
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/gotop.js"></script>
-
-<!-- <script src="http://code.jquery.com/jquery.min.js"></script>
-<script src="http://zeptojs.com/zepto.min.js"></script>
-<link rel="stylesheet" href="js/vegas/vegas.min.css">
-<script src="js/vegas/vegas.min.js"></script> -->
 <link rel="stylesheet" type="text/css" href="css/bgstretcher.css" />
 
 <!-- Demo CSS -->
@@ -39,25 +34,8 @@
 <script src="js/modernizr.js"></script>
 
 <!-- jQuery -->
-<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js">\x3C/script>')</script>
- -->
 <script type="text/javascript" src="js/bgstretcher.js"></script>
-<script type="text/javascript">
-  $(document).ready(function(){
-        //  Initialize Backgound Stretcher
-    $('#banner').bgStretcher({
-      images: ['images/top_bg_00.jpg', 'images/top_bg_02.jpg', 'images/top_bg_03.jpg'],
-      imageWidth: 2200,
-      imageHeight: 1280,
-      slideDirection: 'N',
-      slideShowSpeed: 1000,
-      transitionEffect: 'fade',
-      sequenceMode: 'normal',
-    });
 
-  });
-</script>
 
 <!-- fancybox -->
 <link rel="stylesheet" type="text/css" href="js/source/jquery.fancybox.css" media="screen" />
