換廣告位置

--- a/05/index.html
+++ b/05/index.html
@@ -115,6 +115,16 @@
                 <!-- End Image with Caption -->
                 <p class="m3">撇開表面的霸道不說，虎年出生的女人情緒管理很有一套，儘管在家中她們常常"說一不二"，但私下底絕對會給足丈夫面子，除此之外，屬虎人還能憑藉自己出色的能力為丈夫出謀劃策，是實實在在的幫夫有道。</p>
 
+                <p class="m3">繼續往下看...<span style="font-size: 0.7em; display: block; padding-top: 25px;">(廣告)</span></p>
+                <div class="ad_320x480">
+                    <amp-ad
+                        width=320
+                        height=480
+                        type="doubleclick"
+                        data-slot="/57965253/dailyanan_ampad_320x480">
+                    </amp-ad>
+                </div>
+
                 <!-- Start Image with Caption -->
                 <figure class="ampstart-image-with-caption m0 relative mb4">
                     <amp-img role="button" src="img/03.jpg" width="1000" height="667" alt="" layout="responsive" class=""></amp-img>
@@ -159,14 +169,6 @@
                 </li>
             </ul>
         </footer>
-        <div class="ad_320x480">
-            <amp-ad width=320 height=480
-                    type="doubleclick"
-                    data-slot="/57965253/dailyanan_MB_320x480">
-                <div placeholder>Ad</div>
-                <div fallback>Ad</div>
-            </amp-ad>
-        </div>
         <!-- End Footer -->
     </body>
 </html>
