--- a/07/index.html
+++ b/07/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>這6大生肖女越老越有錢，越老越旺夫！</title>
+    <title>脾氣不好但命好，最容易大富大貴的5大生肖</title>
     <meta property="og:title" content="2018年冬季 財運贏得豐厚收穫的生肖！">
     <meta property="og:site_name" content="2018年冬季 財運贏得豐厚收穫的生肖！">
     <meta property="og:type" content="website">
@@ -48,13 +48,13 @@
         <div class="center">
             <!-- Start Fullpage Hero -->
             <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-                <amp-img width="1350" height="900" alt="" layout="responsive" src="img/00.jpg" media="(max-width: 415px)"></amp-img>
+                <amp-img width="1280" height="1600" alt="" layout="responsive" src="img/00.jpg" media="(max-width: 415px)"></amp-img>
                 <amp-img height="720" alt="" layout="fixed-height" src="img/00.jpg" media="(min-width: 416px)"></amp-img>
                 <figcaption class="absolute top-0 right-0 bottom-0 left-0">
                 <header class="p3">
                     <h1 class="ampstart-fullpage-hero-heading mb3 bold">
                         <span class="ampstart-fullpage-hero-heading-text">
-                            老人常說<br>這6大生肖女<br>越老越有錢<br>越老越旺夫！
+                            脾氣不好但命好，最容易大富大貴的5大生肖
                         </span>
                     </h1>
                 </header>
@@ -87,43 +87,33 @@
                 </div>
             </amp-audio>
             <article class="photo-article">
+
+                <p class="m3 h3 bold">一個人永遠擺不去命運的安排，無論好與壞。<br>在我們看來脾氣不好的人多半很難有好的發展，非也。<br>12生肖中還就是有這麼5個生肖，脾氣是公認了地不好，但是他們命好！</p>
+
                 <!-- Start Image with Caption -->
                 <figure class="ampstart-image-with-caption m0 relative mb4">
-                    <amp-img role="button" src="img/01.jpg" width="1000" height="665" alt="" layout="responsive" class=""></amp-img>
+                    <amp-img role="button" src="img/01.jpg" width="900" height="563" alt="" layout="responsive" class=""></amp-img>
                     <figcaption class="h3 mt1 px3">
                         <span class="ampstart-image-credit block bold center">
-                            生肖牛
+                            第五名：生肖龍
                         </span>
                     </figcaption>
                 </figure>
                 <!-- End Image with Caption -->
-                <p class="m3">屬牛的女人是非常旺夫的，因為屬牛的女人天生就很勤勞，正所謂勤奮是發家致富的寶典。當一個女人勤奮的時候，自然就能夠帶動全家人都跟著勤奮。</p>
+                <p class="m3">屬龍的人性格耿直，對待事物的評斷往往是憑自己的第一感覺，常常讓人覺得刺耳，但話絕對占得住理。正因為直爽性格，讓身邊聚集的都是有本事的行業精英，可以一塊打拼，財豐利達。</p>
 
 
                 <!-- Start Image with Caption -->
                 <figure class="ampstart-image-with-caption m0 relative mb4">
-                    <amp-img role="button" src="img/02.jpg" width="800" height="800" alt="" layout="responsive" class=""></amp-img>
+                    <amp-img role="button" src="img/02.jpg" width="900" height="563" alt="" layout="responsive" class=""></amp-img>
                     <figcaption class="h3 mt1 px3">
                         <span class="ampstart-image-credit block bold center">
-                            生肖羊
+                            第四名：生肖虎
                         </span>
                     </figcaption>
                 </figure>
                 <!-- End Image with Caption -->
-                <p class="m3">正所謂十羊九福全，屬羊的女人是非常有福氣的，結婚以後，還能夠把自身的福氣帶給自己的丈夫，使得自己的丈夫也是福氣滿滿。</p>
-
-                <!-- Start Image with Caption -->
-                <figure class="ampstart-image-with-caption m0 relative mb4">
-                    <amp-img role="button" src="img/03.jpg" width="1000" height="750" alt="" layout="responsive" class=""></amp-img>
-                    <figcaption class="h3 mt1 px3">
-                        <span class="ampstart-image-credit block bold center">
-                            生肖雞
-                        </span>
-                    </figcaption>
-                </figure>
-                <!-- End Image with Caption -->
-                <p class="m3">屬雞的女人也是很旺夫的，因為屬雞的女人天生就很聰明，並且十分有能力。在社會上認識的人很多，結婚以後，這些人都能夠給屬雞的女人的帶來財富，同時屬雞的人還能夠給自己的丈夫帶來大筆的錢財。</p>
-
+                <p class="m3">屬虎的人個性衝動，不喜歡對人說一些阿諛奉承的話。正是他們這樣公平正義的性格，容易獲得貴人的青睞，對他們委以重任，獲得事業上的成功，大富大貴。</p>
 
                 <p class="m3">繼續往下看...<span style="font-size: 0.7em; display: block; padding-top: 25px;">(廣告)</span></p>
                 <div class="ad_320x480">
@@ -137,46 +127,44 @@
 
                 <!-- Start Image with Caption -->
                 <figure class="ampstart-image-with-caption m0 relative mb4">
-                    <amp-img role="button" src="img/04.jpg" width="1000" height="563" alt="" layout="responsive" class=""></amp-img>
+                    <amp-img role="button" src="img/03.jpg" width="900" height="563" alt="" layout="responsive" class=""></amp-img>
                     <figcaption class="h3 mt1 px3">
                         <span class="ampstart-image-credit block bold center">
-                            生肖兔
+                            第三名：生肖牛
                         </span>
                     </figcaption>
                 </figure>
                 <!-- End Image with Caption -->
-                <p class="m3">屬兔女是一個特別善解人意的人。在與丈夫的相處過程中，屬兔女能夠處心積慮的為丈夫著想任何事情，為他排憂解難，不管遇到什麼問題，屬兔女都會靜靜地坐在丈夫旁邊，適時的提醒他應該要怎麼去做好事情。</p>
+                <p class="m3">屬牛的人外表示看似溫和，殊不知也有他們的＂牛脾氣＂。路見不平，容易和人發生語言上的衝突。其實也不過是要維護正義。正因為這種鋼正性格，所以很得人緣，自然人脈廣，朋友對他們的事業上有很大幫忙，想財源滾滾，一點不難。</p>
 
                 <!-- Start Image with Caption -->
                 <figure class="ampstart-image-with-caption m0 relative mb4">
-                    <amp-img role="button" src="img/05.jpg" width="600" height="379" alt="" layout="responsive" class=""></amp-img>
+                    <amp-img role="button" src="img/04.jpg" width="900" height="599" alt="" layout="responsive" class=""></amp-img>
                     <figcaption class="h3 mt1 px3">
                         <span class="ampstart-image-credit block bold center">
-                            生肖龍
+                            第二名：生肖兔
                         </span>
                     </figcaption>
                 </figure>
                 <!-- End Image with Caption -->
-                <p class="m3">屬龍女其實是一個特別積極向上的人，與丈夫結合之後，不管丈夫遇到什麼難題她都會去鼓勵，並且推丈夫一把，讓丈夫在有困難的時候能夠重新見到光明，不至於陷入一種困難的境地。</p>
+                <p class="m3">屬兔的人，都性格柔弱，為人心善，心靈手巧，感情細膩之人。這種人骨子裡有一種憂鬱感，容易感情用事，很難與人相處。但天生善良，即是自己受傷，這種人，一生自有神靈庇佑其身，福旺財多，富貴可求。</p>
 
                 <!-- Start Image with Caption -->
                 <figure class="ampstart-image-with-caption m0 relative mb4">
-                    <amp-img role="button" src="img/06.jpg" width="750" height="500" alt="" layout="responsive" class=""></amp-img>
+                    <amp-img role="button" src="img/05.jpg" width="900" height="563" alt="" layout="responsive" class=""></amp-img>
                     <figcaption class="h3 mt1 px3">
                         <span class="ampstart-image-credit block bold center">
-                            生肖狗
+                            第一名：生肖雞
                         </span>
                     </figcaption>
                 </figure>
                 <!-- End Image with Caption -->
-                <p class="m3">屬狗女能夠讓家庭美滿起來，把家庭內外的事情都協調的一清二楚。也正是因為屬狗女的這一份淡定，還有屬狗女本身的家庭就很優秀，所以給丈夫帶來了很大的機會。</p>
-
-
+                <p class="m3">屬雞的人，是急性子。自己想什麼，就會說出來，不藏著掖著。肖雞人天生尊貴，為人聰明，個性耿直，是真正的朋友。忠於職守的性格，為人生博得勝利，青雲有路，富貴可求。</p>
 
             </article>
 
             <aside>
-                <h2 class="m3 center bold">馬上加入Line@好友<br>立即加入還有更多有趣內容不間斷！</h2>
+                <h2 class="m3 center bold">覺得意猶未盡嗎？<br>加入Line@好友<br>立即看更多有趣內容<br>365天不間斷！</h2>
             </aside>
         </main>
 
